--- a/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
+++ b/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
@@ -28,3 +28,70 @@ public boolean equals(Object o){
 }
 
 ```
+
+---
+
+### 在覆盖 `equals` 方法时的通用约定
+
+#### `equals` 方法实现了 `等价关系`。
+
+- 自反性
+> 对于任何非 `null` 的引用值 `x` , x.equals(x) 必须返回 `true`。
+
+- 对称性
+> 对于任何非 `null` 的引用值 `x` 和 `y` , 
+> 当且仅当 x.equals(y) 返回 `true` 时，y.equals(x) 必须返回 `true` 。
+
+- 传递性
+> 对于任何非 `null` 的引用值 `x` ，`y` 和 `z` , 
+> 如果 x.equals(y) 返回 `true`， 并且 y.equals(z) 也返回 `true`，
+> 那么 x.equals(z) 也必须返回 `true` 。
+
+- 一致性
+> 对于任何非 `null` 的引用值 `x` 和 `y` , 
+> x.equals(y) 多次调用返回结果不变。
+
+#### 覆盖实现 `equals` 方法的五个要求：
+
+- 自反性
+- 对称性
+> 特例： `Timestamp` 违反了对称性，源码中有免责声明
+- 传递性
+- 一致性
+> 特例： `java.net.URL` 违反了一致性，源码中有免责声明
+- 非空性
+> `instanceof` 的第一个操作数为 `null`， 那么，不管第二个操作数是那种类型，
+> `instanceof` 操作符都返回 `false` 
+
+---
+
+### 实现 `equals` 方法最佳实践
+
+- 使用 `==` 操作符检查“参数是否为这个对象的引用”。
+> 如果是，则返回 `true`。这只不过是一种性能优化，
+> 如果比较操作代价比较大，就值得这么做。
+
+- 使用 `instanceof` 操作符检查“参数是否为正确的类型”。
+- 把参数转换成正确的类型。因为转换之前进行过 `instanceof` 测试，所以确保会成功。
+- 对于该类中的每个“关键”域，检查参数中的域是否与该对象中对应的域相匹配。
+- 编写完成 `equals` 方法之后，应该编写验证是否符合实现 `equals` 方法的五个要求。
+    - 覆盖 `equals` 方法时总要覆盖 `hashCode`
+    - 不要企图让 `equals` 方法过于智能
+    - 不要将 `equals` 声明中的 `Object` 对象替换为其他的类型。 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+asdf
+
