增加域配置指导原则

--- a/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
+++ b/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
@@ -74,6 +74,11 @@ public boolean equals(Object o){
 - 使用 `instanceof` 操作符检查“参数是否为正确的类型”。
 - 把参数转换成正确的类型。因为转换之前进行过 `instanceof` 测试，所以确保会成功。
 - 对于该类中的每个“关键”域，检查参数中的域是否与该对象中对应的域相匹配。
+    - 对于除 `float` 和 `double` 外的基本类型域，可以使用 `==` 操作符进行比较
+    - 对于对象引用域，可以递归调用 `equals` 方法
+    - 对于 `float` 域，可以使用 `Float.compare` 方法
+    - 对于 `double` 域，可以使用 `Double.compare` 方法
+    - 对于 数组域，则要把以上原则应用到每个元素上
 - 编写完成 `equals` 方法之后，应该编写验证是否符合实现 `equals` 方法的五个要求。
     - 覆盖 `equals` 方法时总要覆盖 `hashCode`
     - 不要企图让 `equals` 方法过于智能
