--- a/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
+++ b/Effective Java II/3.对所有对象都通用的方法/3.1 覆盖 `equals` 时 请遵守通用约定.md
@@ -65,7 +65,7 @@ public boolean equals(Object o){
 
 ---
 
-### 实现 `equals` 方法最佳实践
+### 覆盖 `equals` 方法最佳实践
 
 - 使用 `==` 操作符检查“参数是否为这个对象的引用”。
 > 如果是，则返回 `true`。这只不过是一种性能优化，
