--- a/Effective Java II/3.对所有对象都通用的方法/3.2 覆盖 `equals` 时 总要覆盖 `hashCode`.md
+++ b/Effective Java II/3.对所有对象都通用的方法/3.2 覆盖 `equals` 时 总要覆盖 `hashCode`.md
@@ -19,7 +19,7 @@
 条件B： `hashCode` 相等
 那么： A => B 
 
-### `hashCode` 最佳实践
+### 覆盖 `hashCode` 方法最佳实践
 
 - 使用 `IDE` 工具自动生成 `hashCode` 方法
 - 如果一个类是不可变的，并且计算散列码的开销也比较大，就应该考虑把散列码缓存在对象内部，而不是每次请求的时候都重新计算散列码。如果觉得这种类型的大多数对象会被用做散列键（`hash keys`）,就应该在创建实例的时候计算散列码。或者使用懒加载的方式进行初始化操作，在第一次调用时初始化。
