--- a/Effective Java II/4.类和接口/4.1 使类和成员的可访问性最小化.md
+++ b/Effective Java II/4.类和接口/4.1 使类和成员的可访问性最小化.md
@@ -2,3 +2,9 @@
 
 ## 4.1 使类和成员的可访问性最小化
 
+### 最佳实践
+
+> 除了公用静态 `final` 域的特殊情形之外，公有类都不应该包含公有域。
+> 并且要确保公有静态 `final` 域所引用的对象都是不可变的。
+
+> 注意：长度非零的数组总是可变的。
