--- a/Effective Java II/目录.md
+++ b/Effective Java II/目录.md
@@ -9,6 +9,16 @@
     - 3.4 谨慎地覆盖 `clone`
     - 3.5 考虑实现 `Comparable` 接口
 -  4.类和接口
+    - 4.1 使类和成员的可访问性最小化
+    - 4.2 在公有类中使用访问方法而非公有域
+    - 4.3 使可变性最小化
+    - 4.4 复合优先于继承
+    - 4.5 要么为继承而设计并提供说明文档，否则就禁止继承
+    - 4.6 接口优先于抽象类
+    - 4.7 接口只用于定义类型
+    - 4.8 类层次优先于标签类
+    - 4.9 用函数对象表示策略
+    - 4.10 优先考虑静态成员类
 -  5.泛型
 -  6.枚举和注解
 -  7.方法
