--- a/Effective Java II/4.类和接口/4.1 使类和成员的可访问性最小化.md
+++ b/Effective Java II/4.类和接口/4.1 使类和成员的可访问性最小化.md
@@ -13,7 +13,7 @@
 
 public class TestBean {
 
-    // 这样是用安全漏洞的。
+    // 这样使用是有安全漏洞的。
 //    public static final String[] PRIVATE_VALUES = {};
 
     // 方法一： 使公有数组变成私有的，并增加一个公有的不可变的列表。
