2018年度读书计划

--- a/A-A-Plan/2018年度读书计划.md
+++ b/A-A-Plan/2018年度读书计划.md
@@ -3,10 +3,24 @@
 
 ### 技术
 
-- [ ] Effective Java II 
+- [x] Effective Java II 
+- [ ] Java 编程思想
+- [ ] Java 核心技术卷 I
+- [ ] Java 核心技术卷 II
+- [ ] Java 多线程编程核心技术
+- [ ] Java 并发编程的艺术
+- [ ] 大型网站技术架构核心原理与案例分析
+- [ ] HTTP 权威指南
+- [ ] Linux Shell 脚本攻略
+- [ ] 代码大全 第 2 版
 
-### 其他 …
+### 其他 … 
 
+- [ ] 活着本来简单
+- [ ] 自在独行
+- [ ] 不忘初心，方得始终
+- [ ] 曾国藩家书
+- [ ] 菜根谭的智慧
 
 
 
