--- a/Effective Java II/目录.md
+++ b/Effective Java II/目录.md
@@ -20,6 +20,13 @@
     - 4.9 用函数对象表示策略
     - 4.10 优先考虑静态成员类
 -  5.泛型
+    - 5.1 请不要在新代码中使用原生态类型
+    - 5.2 消除非受检警告
+    - 5.3 列表优先于数组
+    - 5.4 优先考虑泛型
+    - 5.5 优先考虑泛型方法
+    - 5.6 利用有限制通配符来提升 `API` 的灵活性
+    - 5.7 优先考虑类型安全的异构容器
 -  6.枚举和注解
 -  7.方法
 -  8.通用程序设计
