2.创建和销毁对象

--- a/Effective Java II/目录.md
+++ b/Effective Java II/目录.md
@@ -2,6 +2,13 @@
 # Effective Java II 目录
 -  1.引言
 -  2.创建和销毁对象
+    - 2.1 考虑静态工厂方法代替构造器
+    - 2.2 遇到多个构造器参数时要考虑用构建器
+    - 2.3 用私有构造器或者枚举类型强化 `singleton` 属性
+    - 2.4 通过私有构造器强化不可实例化的能力
+    - 2.5 避免创建不必要的对象
+    - 2.6 消除过期的对象引用
+    - 2.7 避免使用终结方法
 -  3.对所有对象都通用的方法
     - 3.1 覆盖 `equals` 时 请遵守通用约定
     - 3.2 覆盖 `equals` 时 总要覆盖 `hashCode`
