--- a/Effective Java II/2.创建和销毁对象/2.1 考虑静态工厂方法代替构造器.md
+++ b/Effective Java II/2.创建和销毁对象/2.1 考虑静态工厂方法代替构造器.md
@@ -1,6 +1,27 @@
-# 第五章 类和接口
+# 第二章 创建和销毁对象
 
-## 5.3 列表优先于数组
+## 2.1 考虑静态工厂方法代替构造器
+
+### 概述
+
+对于类而言，为了让客户端获取它自身的一个实例，最常用的方法就是提供一个公有的构造器。
+还有一种方法就是类可以提供一个公有的静态工厂方法，他只是一个返回类的实例的静态方法。
+
+### 静态工厂方法的好处
+
+- 静态工厂方法与构造器不同的第一大优势在于,他们有名称。
+> 如果构造器的参数本身没有确切描述正被返回的对象，
+> 那么可以使用具有适当名称的静态工厂方法进行替代，
+> 这样产生的客户端代码也更易于阅读，
 
 
+
+### 最佳实践
+
+> 如果构造器的参数本身没有确切描述正被返回的对象，
+> 那么可以使用具有适当名称的静态工厂方法进行替代，
+> 这样产生的客户端代码也更易于阅读，
+
+> 当一个类需要多个带有相同签名的构造器时，就用静态工厂方法代替构造器，
+> 并且慎重地选择名称以便突出它们之间的区别。
 
